--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,14 @@
 name: Test and Build Project
 
-on: 
+on:
+  workflow_dispatch:
+  push: 
 
-  workflow_dispatch: # workflow dispatch is for manual run from actions page
-  push: # on push
-  
-  
+#  Разрешения на запись в Checks API
+permissions:
+  checks: write
+  contents: read
+
 jobs:
   testProject:
     name: Test in ${{ matrix.testMode }}
@@ -13,9 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # name of project folder or ./
         projectPath:
-          - ./
+          - ./SuperCool proejct
         testMode:
           - playmode
           - editmode
@@ -24,12 +26,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           lfs: true
+
       - uses: actions/cache@v4
         with:
           path: ${{ matrix.projectPath }}/Library
           key: Library-${{ matrix.projectPath }}
           restore-keys: |
             Library-
+
       - uses: game-ci/unity-test-runner@v4
         id: tests
         env:
@@ -42,7 +46,7 @@ jobs:
           artifactsPath: ${{ matrix.testMode }}-artifacts
           githubToken: ${{ secrets.GITHUB_TOKEN }}
           checkName: ${{ matrix.testMode }} Test Results
-          unityVersion: 6000.1.2f1
+
       - uses: actions/upload-artifact@v4
         if: always()
         with:
@@ -56,23 +60,23 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        targetPlatform:		
-          - StandaloneWindows64 # Build a Windows 64-bit standalone.
-          - StandaloneLinux64 # Build a Linux 64-bit standalone.
+        targetPlatform:
+          - StandaloneWindows64
+          - StandaloneLinux64
           - Android
 
-         # comment or uncomment your desired platforms
-         
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
           lfs: true
+
       - uses: actions/cache@v4
         with:
           path: Library
           key: Library-${{ matrix.targetPlatform }}
           restore-keys: Library-
+
       - uses: game-ci/unity-builder@v4
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
@@ -80,9 +84,8 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
         with:
           targetPlatform: ${{ matrix.targetPlatform }}
-          unityVersion: 6000.1.2f1
+
       - uses: actions/upload-artifact@v4
         with:
           name: Build-${{ matrix.targetPlatform }}
           path: build/${{ matrix.targetPlatform }}
-
